--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
