--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.320.0",
+    "mongoose": "^8.2.1",
     "next": "14.1.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
