--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^8.2.1",
     "next": "14.1.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
