--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "free-translate": "^0.6.1",
     "lucide-react": "^0.320.0",
     "mongoose": "^8.2.1",
     "next": "14.1.0",
